5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1578_1327.log
== SUBMITION (2019-03-13 13:12:04) 
-- CODE:
print(90-55=35)
-- EXECUTION TIME:
0.144228
-- ERROR:
  File "/home/codebench/codes/1578/1327/main.py", line 1
    print(90-55=35)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:12:20) 
-- CODE:
print(35)
-- EXECUTION TIME:
0.142705
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
